--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "gulp-livereload": "3.8.0",
     "gulp-autoprefixer": "2.1.0",
     "gulp-rename": "1.2.0",
-    "gulp-concat": "^2.6.0"
+    "gulp-concat": "^2.6.0",
+    "gulp-shell": "^0.5.1",
+    "gulp-clean": "^0.3.1"
   },
   "keywords": [],
   "author": "Emre Sakarya",
